1968 - Document edit and metadata on mobile * Ensure topics are visible on mobile without overflow * Ensure other fields don't exceed mobile width
With topics and subtopics being numerous, and our decision
to show them all at once with indents, the only viable
solution I could come up with for mobile was to have them
fall into a tall vertical stack. I'm open to other solutions
if anyone has strong feelings about my choice.

--- a/kitsune/sumo/static/sumo/scss/base/forms/_button-wrap.scss
+++ b/kitsune/sumo/static/sumo/scss/base/forms/_button-wrap.scss
@@ -38,6 +38,11 @@
   margin-bottom: -#{p.$spacing-sm};
   padding: p.$spacing-sm 0;
   width: 100%;
+  max-width: 95%;  // Default for mobile
+
+  @media #{p.$mq-md} {
+    max-width: 100%;  // Return to full width on desktop
+  }
 
   &.align-end {
     justify-content: flex-end;
